--- a/MITOS_norm.Rmd
+++ b/MITOS_norm.Rmd
@@ -1385,32 +1385,32 @@ DT::datatable(
 ```
 
 ```{r}
-protein.groups_ludovic_raw <- protein.groups
-nas <- rep(NA,nrow(protein.groups))
-imputed_ludovic_correct <- data.frame(KO.22=nas, KO.23=nas, KO.24=nas, WT.22=nas, WT.23=nas, WT.24=nas)
-imputed_ludovic_correct[as.numeric(gsub("prot_", "", imputed_ludovic$`Protein IDs`)),] <- imputed_ludovic[,3:8]
-protein.groups_ludovic_raw$`LFQ intensity KO_MITOS_22` <- imputed_ludovic_correct$KO.22
-protein.groups_ludovic_raw$`LFQ intensity KO_MITOS_23` <- imputed_ludovic_correct$KO.23
-protein.groups_ludovic_raw$`LFQ intensity KO_MITOS_24` <- imputed_ludovic_correct$KO.24
-protein.groups_ludovic_raw$`LFQ intensity WT_MITOS_22` <- imputed_ludovic_correct$WT.22
-protein.groups_ludovic_raw$`LFQ intensity WT_MITOS_23` <- imputed_ludovic_correct$WT.23
-protein.groups_ludovic_raw$`LFQ intensity WT_MITOS_24` <- imputed_ludovic_correct$WT.24
+# protein.groups_ludovic_raw <- protein.groups
+# nas <- rep(NA,nrow(protein.groups))
+# imputed_ludovic_correct <- data.frame(KO.22=nas, KO.23=nas, KO.24=nas, WT.22=nas, WT.23=nas, WT.24=nas)
+# imputed_ludovic_correct[as.numeric(gsub("prot_", "", imputed_ludovic$`Protein IDs`)),] <- imputed_ludovic[,3:8]
+# protein.groups_ludovic_raw$`LFQ intensity KO_MITOS_22` <- imputed_ludovic_correct$KO.22
+# protein.groups_ludovic_raw$`LFQ intensity KO_MITOS_23` <- imputed_ludovic_correct$KO.23
+# protein.groups_ludovic_raw$`LFQ intensity KO_MITOS_24` <- imputed_ludovic_correct$KO.24
+# protein.groups_ludovic_raw$`LFQ intensity WT_MITOS_22` <- imputed_ludovic_correct$WT.22
+# protein.groups_ludovic_raw$`LFQ intensity WT_MITOS_23` <- imputed_ludovic_correct$WT.23
+# protein.groups_ludovic_raw$`LFQ intensity WT_MITOS_24` <- imputed_ludovic_correct$WT.24
 
-protein.groups_ludovic_eigenms <- protein.groups
-eigen_ludovic <- LFQ_ludovic.eig_norm$norm_m
-eigen_ludovic_clean <- data.frame(KO.22=nas, KO.23=nas, KO.24=nas, WT.22=nas, WT.23=nas, WT.24=nas)
-eigen_ludovic_clean[as.numeric(gsub("prot_", "", imputed_ludovic$`Protein IDs`)),] <- eigen_ludovic
+# protein.groups_ludovic_eigenms <- protein.groups
+# eigen_ludovic <- LFQ_ludovic.eig_norm$norm_m
+# eigen_ludovic_clean <- data.frame(KO.22=nas, KO.23=nas, KO.24=nas, WT.22=nas, WT.23=nas, WT.24=nas)
+# eigen_ludovic_clean[as.numeric(gsub("prot_", "", imputed_ludovic$`Protein IDs`)),] <- eigen_ludovic
 
-protein.groups_ludovic_eigenms$`LFQ intensity KO_MITOS_22` <- eigen_ludovic_clean$KO.22
-protein.groups_ludovic_eigenms$`LFQ intensity KO_MITOS_23` <- eigen_ludovic_clean$KO.23
-protein.groups_ludovic_eigenms$`LFQ intensity KO_MITOS_24` <- eigen_ludovic_clean$KO.24
-protein.groups_ludovic_eigenms$`LFQ intensity WT_MITOS_22` <- eigen_ludovic_clean$WT.22
-protein.groups_ludovic_eigenms$`LFQ intensity WT_MITOS_23` <- eigen_ludovic_clean$WT.23
-protein.groups_ludovic_eigenms$`LFQ intensity WT_MITOS_24` <- eigen_ludovic_clean$WT.24
+# protein.groups_ludovic_eigenms$`LFQ intensity KO_MITOS_22` <- eigen_ludovic_clean$KO.22
+# protein.groups_ludovic_eigenms$`LFQ intensity KO_MITOS_23` <- eigen_ludovic_clean$KO.23
+# protein.groups_ludovic_eigenms$`LFQ intensity KO_MITOS_24` <- eigen_ludovic_clean$KO.24
+# protein.groups_ludovic_eigenms$`LFQ intensity WT_MITOS_22` <- eigen_ludovic_clean$WT.22
+# protein.groups_ludovic_eigenms$`LFQ intensity WT_MITOS_23` <- eigen_ludovic_clean$WT.23
+# protein.groups_ludovic_eigenms$`LFQ intensity WT_MITOS_24` <- eigen_ludovic_clean$WT.24
 ```
 
 ```{r}
-write.table(protein.groups_ludovic_raw, file="proteingroups_ludovic_raw_MITOS.txt", sep="\t", row.names = FALSE)
+# write.table(protein.groups_ludovic_raw, file="proteingroups_ludovic_raw_MITOS.txt", sep="\t", row.names = FALSE)
 
-write.table(protein.groups_ludovic_eigenms, file="proteingroups_ludovic_eigenms_MITOS.txt", sep="\t", row.name=FALSE)
+# write.table(protein.groups_ludovic_eigenms, file="proteingroups_ludovic_eigenms_MITOS.txt", sep="\t", row.name=FALSE)
 ```
